# predicates

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-wheels.yaml
python/predicates/: __init__.py  _predicatesmodule.c
python/predicates.egg-info/: PKG-INFO  SOURCES.txt
python/tests/: test_bindings.py
